[package]
name = "hyper-on-workers"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { workspace=true }
hyper = { version = "0.14.27", default-features = false, features = ['http1', 'client'] }
tokio = { version = "1.29.1", default-features = false, features = ['io-util', 'macros'] }
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.37"
