[package]
name = "rust-rpc-client"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker.workspace = true
async-trait = "0.1"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

[build-dependencies]
worker-codegen.workspace = true
